<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.michal.galecki.lab1.bmi.MainActivity"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        >

        <Switch
            android:id="@+id/switch_main_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metric_units"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textview_main_mass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_mass"
            android:textSize="20sp"
            android:layout_alignBaseline="@+id/edittext_main_mass"
            android:layout_alignEnd="@+id/textview_main_height"
            />

        <EditText
            android:id="@+id/edittext_main_mass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/switch_main_units"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textview_main_mass"
            />

        <TextView
            android:id="@+id/textview_main_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_height"
            android:textSize="20sp"
            android:layout_alignBaseline="@+id/edittext_main_height"
            />

        <EditText
            android:id="@+id/edittext_main_height"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"
            android:layout_below="@+id/edittext_main_mass"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textview_main_height"
            />

        <Button
            android:id="@+id/button_main_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/all_count"
            android:layout_below="@+id/edittext_main_height"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/textview_bmi_yourbmi"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_your_bmi"
            android:textAlignment="center"
            android:textSize="25sp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            android:layout_below="@+id/button_main_count"
            />

        <TextView
            android:id="@+id/textview_bmi_result"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="50sp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:layout_below="@+id/textview_bmi_yourbmi"
            android:layout_alignStart="@+id/textview_bmi_yourbmi"
            android:layout_alignEnd="@+id/textview_bmi_yourbmi"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textview_bmi_description"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@color/colorPrimary"
            android:textAlignment="center"
            android:layout_below="@+id/textview_bmi_result"
            android:layout_alignStart="@+id/textview_bmi_result"
            android:layout_alignEnd="@+id/textview_bmi_result" />

        
    </RelativeLayout>
</ScrollView>