<resources>
    <string name="app_name">BMI</string>
    <string name="all_mass">Mass</string>
    <string name="all_height">Height</string>
    <string name="all_count">Count</string>
    <string name="all_your_bmi">Your BMI:</string>
    <string name="imperial_units">Imperial units (feet, pounds)</string>
    <string name="metric_units">Metric units (meters, kilograms)</string>
    <string name="very_severely_underweight">Very severely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal_weight">Normal weight</string>
    <string name="overweight">Overweight</string>
...
